# tamalib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/tamagotchi-piston/: Cargo.toml
examples/tamagotchi-piston/src/: buzzer.rs  clock.rs  logger.rs  main.rs
examples/tamagotchi-piston/src/graphics/: mod.rs  ui.rs
examples/tamagotchi-wasm/: Cargo.toml
examples/tamagotchi-wasm/src/: lib.rs
examples/tamagotchi-wasm/www/: index.html  index.js
src/: lib.rs  logger.rs  rom.rs
src/cpu/: clock.rs  flags.rs  inputs.rs  instructions.rs  interrupt.rs  io_register.rs  mod.rs
src/io/: button.rs  buzzer.rs  iobus.rs  mod.rs  screen.rs
tamalib_macros/: Cargo.toml
tamalib_macros/src/: lib.rs
