[package]
name = "tamagotchi-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
tamalib-rs = { path = "../.." }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }